--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -6,6 +6,7 @@
 	/>
 	<h1>Welcome to {{ title }}!</h1>
 </header>
+<visual-ts-viewer></visual-ts-viewer>
 <main>
 	<h2>Resources &amp; Tools</h2>
 	<p>
