--- a/apps/web/src/app/viewer/viewer.component.html
+++ b/apps/web/src/app/viewer/viewer.component.html
@@ -1,5 +1,5 @@
 <p>viewer works!</p>
 
-<svg #svg><g /></svg>
+<visual-ts-graph [nodes]="nodes" [links]="links"></visual-ts-graph>
 
 <p>or, does it?</p>
