--- a/apps/presenter/src/app/app.component.html
+++ b/apps/presenter/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-graph class="chart-container" [view]="[1000, 800]" [links]="[
+<ngx-graph class="chart-container" [links]="[
     {
       id: 'a',
       source: 'first',
