--- a/apps/presenter/src/app/app.component.html
+++ b/apps/presenter/src/app/app.component.html
@@ -1,12 +1,26 @@
-<ngx-graph class="chart-container" [links]="(model$ | async).edges" [nodes]="(model$ | async).nodes">
-
+<ngx-graph
+	class="chart-container"
+	[links]="(model$ | async).edges"
+	[nodes]="(model$ | async).nodes"
+>
 	<ng-template #nodeTemplate let-node>
 		<svg:g>
-			<rect [attr.rx]="node.dimension.height / 2" [attr.ry]="node.dimension.height" [attr.width]="node.dimension.width" [attr.height]="node.dimension.height" class="node" />
-			<svg:text alignment-baseline="central" [attr.x]="10" [attr.y]="node.dimension.height / 2 + 5">{{node.label}}</svg:text>
+			<rect
+				[attr.rx]="node.dimension.height / 2"
+				[attr.ry]="node.dimension.height"
+				[attr.width]="node.dimension.width"
+				[attr.height]="node.dimension.height"
+				class="node"
+			/>
+			<svg:text
+				alignment-baseline="central"
+				[attr.x]="10"
+				[attr.y]="node.dimension.height / 2 + 5"
+			>
+				{{ node.label }}
+			</svg:text>
 		</svg:g>
 	</ng-template>
 </ngx-graph>
-
 
 <router-outlet></router-outlet>
